--- a/longformer_qa_training.ipynb
+++ b/longformer_qa_training.ipynb
@@ -4584,7 +4584,7 @@
       "source": [
         "args_dict = {\n",
         "  \"n_gpu\": 1,\n",
-        "  \"model_name_or_path\": 'longformer-base-4096',\n",
+        "  \"model_name_or_path\": 'allenai/longformer-base-4096',\n",
         "  \"max_len\": 512 ,\n",
         "  \"output_dir\": './models',\n",
         "  \"overwrite_output_dir\": True,\n",
