update model path

--- a/longformer_qa_training.ipynb
+++ b/longformer_qa_training.ipynb
@@ -3956,7 +3956,7 @@
         }
       },
       "source": [
-        "tokenizer = LongformerTokenizerFast.from_pretrained('longformer-base-4096')"
+        "tokenizer = LongformerTokenizerFast.from_pretrained('allenai/longformer-base-4096')"
       ],
       "execution_count": 0,
       "outputs": [
