--- a/onnx_t5.ipynb
+++ b/onnx_t5.ipynb
@@ -338,7 +338,7 @@
    "outputs": [],
    "source": [
     "tokenizer = AutoTokenizer.from_pretrained(\"t5-small\")\n",
-    "enc = tokenizer(\"translate English to French: My nane is Suraj.\", return_tensors=\"pt\")"
+    "enc = tokenizer(\"translate English to French: 42 is the answer to life the universe and everything.\", return_tensors=\"pt\")"
    ]
   },
   {
@@ -373,7 +373,7 @@
     {
      "data": {
       "text/plain": [
-       "['Mon nan est Suraj.']"
+       "[\"42 est la réponse à la vie l'univers et tout.\"]"
       ]
      },
      "execution_count": 11,
