--- a/longformer_qa_training.ipynb
+++ b/longformer_qa_training.ipynb
@@ -5402,6 +5402,7 @@
       "source": [
         "predictions = []\n",
         "references = []\n",
+        "valid_dataset.reset_format()\n"
         "for ref, pred in zip(valid_dataset, answers):\n",
         "  predictions.append(pred)\n",
         "  references.append(ref['answers']['text'])"
